--- a/app/src/main/res/layout/fragment_extract.xml
+++ b/app/src/main/res/layout/fragment_extract.xml
@@ -23,191 +23,198 @@
     android:padding="16dp"
     tools:context=".ExtractFragment">
 
-    <RelativeLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:scrollbars="none"
         tools:ignore="UselessParent">
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/infoButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:icon="@drawable/ic_info"
-            style="@style/Widget.Material3.Button.IconButton"
-            android:layout_alignParentEnd="true"
-            tools:ignore="RelativeOverlap" />
-
-        <TextView
-            android:id="@+id/appName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="35sp"
-            android:text="@string/app_name"
-            android:layout_marginVertical="90dp"
-            android:textAllCaps="true"
-            android:textStyle="bold"
-            android:layout_centerHorizontal="true"/>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_above="@id/relativeLayout"
-            android:layout_below="@id/appName">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/select"
-                android:textSize="20sp"
-                android:textStyle="bold"
-                android:layout_centerVertical="true"
-                android:layout_marginStart="10dp"
-                 />
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/clear_cache_btnPF"
-                style="@style/Widget.Material3.Button.IconButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true"
-                android:layout_marginStart="5dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginEnd="5dp"
-                android:layout_marginBottom="5dp"
-                app:icon="@drawable/ic_cache_delete" />
-        </RelativeLayout>
         <LinearLayout
-            android:id="@+id/relativeLayout"
             android:layout_width="match_parent"
-            android:gravity="center_horizontal"
-            android:layout_margin="10dp"
-            android:layout_centerInParent="true"
             android:layout_height="wrap_content">
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/pickFileButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:text="@string/file"
-                app:cornerRadius="10dp"
-                style="@style/Widget.Material3.Button.OutlinedButton"
-                android:layout_weight="1"
-                app:icon="@drawable/ic_copy_file" />
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/pickMFilesButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                style="@style/Widget.Material3.Button.OutlinedButton"
-                app:icon="@drawable/ic_files_copy"
-                android:text="@string/files"
-                android:layout_weight="1"
-                app:cornerRadius="10dp" />
-
-        </LinearLayout>
-
-        <TextView
-            android:id="@+id/fileNameTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="25dp"
-            android:layout_below="@id/relativeLayout"
-            android:layout_centerInParent="true"
-            android:layout_marginTop="10dp"
-            android:ellipsize="marquee"
-            android:marqueeRepeatLimit="marquee_forever"
-            android:scrollHorizontally="true"
-            android:singleLine="true"
-            android:textAlignment="center"
-            android:textSize="18sp" />
-
-        <RelativeLayout
-            android:id="@+id/relativeLayout2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_below="@id/fileNameTextView">
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/changeDirectoryButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/extract_to"
-                style="@style/Widget.Material3.Button.OutlinedButton"
-                android:layout_centerHorizontal="true"
-                app:icon="@drawable/ic_round_subdirectory"
-                app:cornerRadius="10dp"/>
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/clear_cache_btnDP"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                style="@style/Widget.Material3.Button.IconButton"
-                android:layout_toEndOf="@id/changeDirectoryButton"
-                app:icon="@drawable/ic_cache_delete" />
-        </RelativeLayout>
-
-        <HorizontalScrollView
-            android:id="@+id/directoryScrollView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_centerVertical="true"
-            android:layout_below="@id/relativeLayout2">
-            <TextView
-                android:id="@+id/directoryTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:scrollHorizontally="true"
-                android:singleLine="true"
-                android:textSize="18sp" />
-        </HorizontalScrollView>
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/extractButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/directoryScrollView"
-            android:layout_centerHorizontal="true"
-            android:layout_margin="5dp"
-            style="@style/Widget.Material3.Button.OutlinedButton"
-            android:text="@string/extract"
-            app:cornerRadius="10dp"
-            app:icon="@drawable/ic_round_unarchive" />
-
-        <RelativeLayout
-            android:id="@+id/progressLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@id/extractButton"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="-50dp">
-
-            <com.google.android.material.progressindicator.LinearProgressIndicator
-                android:id="@+id/progressBar"
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                app:indicatorColor="#00B8D4"/>
+                android:layout_height="match_parent"
+                tools:ignore="UselessParent">
 
-            <TextView
-                android:id="@+id/progressTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/progressBar"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="4dp"
-                android:textSize="18sp" />
-        </RelativeLayout>
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/infoButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:icon="@drawable/ic_info"
+                    style="@style/Widget.Material3.Button.IconButton"
+                    android:layout_alignParentEnd="true"
+                    tools:ignore="RelativeOverlap" />
 
-        <com.google.android.material.progressindicator.CircularProgressIndicator
-            android:id="@+id/circularProgressBar"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_centerInParent="true"
-            android:indeterminate="true" />
-    </RelativeLayout>
+                <TextView
+                    android:id="@+id/appName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="35sp"
+                    android:text="@string/app_name"
+                    android:layout_marginVertical="60dp"
+                    android:textAllCaps="true"
+                    android:textStyle="bold"
+                    android:layout_centerHorizontal="true"/>
 
+                <RelativeLayout
+                    android:id="@+id/relativeLayout1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/appName"
+                    android:layout_marginBottom="10dp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_marginStart="10dp"
+                        android:text="@string/select"
+                        android:textSize="20sp"
+                        android:textStyle="bold" />
+
+                    <com.google.android.material.button.MaterialButton
+                        android:id="@+id/clear_cache_btnPF"
+                        style="@style/Widget.Material3.Button.IconButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentEnd="true"
+                        android:layout_centerVertical="true"
+                        android:layout_margin="5dp"
+                        app:icon="@drawable/ic_cache_delete" />
+                </RelativeLayout>
+
+                <LinearLayout
+                    android:id="@+id/relativeLayout"
+                    android:layout_width="match_parent"
+                    android:gravity="center_horizontal"
+                    android:layout_margin="10dp"
+                    android:layout_below="@id/relativeLayout1"
+                    android:layout_height="wrap_content">
+
+                    <com.google.android.material.button.MaterialButton
+                        android:id="@+id/pickFileButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="5dp"
+                        android:text="@string/file"
+                        app:cornerRadius="10dp"
+                        style="@style/Widget.Material3.Button.OutlinedButton"
+                        android:layout_weight="1"
+                        app:icon="@drawable/ic_copy_file" />
+
+                    <com.google.android.material.button.MaterialButton
+                        android:id="@+id/pickMFilesButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="5dp"
+                        style="@style/Widget.Material3.Button.OutlinedButton"
+                        app:icon="@drawable/ic_files_copy"
+                        android:text="@string/files"
+                        android:layout_weight="1"
+                        app:cornerRadius="10dp" />
+
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/fileNameTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="25dp"
+                    android:layout_below="@id/relativeLayout"
+                    android:layout_centerInParent="true"
+                    android:layout_marginTop="10dp"
+                    android:ellipsize="marquee"
+                    android:marqueeRepeatLimit="marquee_forever"
+                    android:scrollHorizontally="true"
+                    android:singleLine="true"
+                    android:textAlignment="center"
+                    android:textSize="18sp" />
+
+                <RelativeLayout
+                    android:id="@+id/relativeLayout2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:layout_below="@id/fileNameTextView">
+
+                    <com.google.android.material.button.MaterialButton
+                        android:id="@+id/changeDirectoryButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/extract_to"
+                        style="@style/Widget.Material3.Button.OutlinedButton"
+                        android:layout_centerHorizontal="true"
+                        app:icon="@drawable/ic_round_subdirectory"
+                        app:cornerRadius="10dp"/>
+
+                    <com.google.android.material.button.MaterialButton
+                        android:id="@+id/clear_cache_btnDP"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        style="@style/Widget.Material3.Button.IconButton"
+                        android:layout_toEndOf="@id/changeDirectoryButton"
+                        app:icon="@drawable/ic_cache_delete" />
+                </RelativeLayout>
+
+                <HorizontalScrollView
+                    android:id="@+id/directoryScrollView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:layout_centerVertical="true"
+                    android:layout_below="@id/relativeLayout2">
+                    <TextView
+                        android:id="@+id/directoryTextView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:scrollHorizontally="true"
+                        android:singleLine="true"
+                        android:textSize="18sp" />
+                </HorizontalScrollView>
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/extractButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/directoryScrollView"
+                    android:layout_centerHorizontal="true"
+                    android:layout_margin="5dp"
+                    style="@style/Widget.Material3.Button.OutlinedButton"
+                    android:text="@string/extract"
+                    app:cornerRadius="10dp"
+                    app:icon="@drawable/ic_round_unarchive" />
+
+                <RelativeLayout
+                    android:id="@+id/progressLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignBottom="@id/extractButton"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginBottom="-50dp">
+
+                    <com.google.android.material.progressindicator.LinearProgressIndicator
+                        android:id="@+id/progressBar"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_centerHorizontal="true"
+                        app:indicatorColor="#00B8D4"/>
+
+                    <TextView
+                        android:id="@+id/progressTextView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/progressBar"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginTop="4dp"
+                        android:textSize="18sp" />
+                </RelativeLayout>
+
+                <com.google.android.material.progressindicator.CircularProgressIndicator
+                    android:id="@+id/circularProgressBar"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_centerInParent="true"
+                    android:indeterminate="true" />
+            </RelativeLayout>
+        </LinearLayout>
+    </ScrollView>
 </FrameLayout>
